<resources>
    <string name="app_name">Kriolnews</string>
    <string name="app_title">Kriolnews Aplicação de Noticias</string>
    <string name="app_subtitle">Entre para o Mundo de Noticias</string>
    <string name="hint_email">Email do utilizador</string>
    <string name="hint_passoword">Senha do utilizador</string>
    <string name="hint_username">Nome de usuario</string>
    <string name="title_activity_home">Kriolnews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="app_version">Versão 1.0</string>

    <string name="menu_home">Home</string>
    <string name="menu_expre">Expresso das Ilhas</string>
    <string name="menu_anacao">A Nação</string>
    <string name="menu_opais">O Pais</string>
    <string name="menu_cmv">Cv Magazine</string>
    <string name="menu_jeconomico">Jornal Economico</string>
    <string name="menu_sma">S. Magazine</string>
    <string name="menu_ce">Criolo Sports</string>
    <string name="menu_gprofile">Minha Conta</string>
    <string name="menu_conf">Configurações</string>

</resources>
